# AirSim

./: .gitignore  .gitmodules  CHANGELOG.html  CMakeLists.txt  Dockerfile.jp45_dashing_agx  Dockerfile.jp45_dashing_devel  README.md  build_trt_engines.sh  coding_guidelines.html  index.html  multi_vehicle.html  package.xml  px4_sitl_wsl2.html  ros_entrypoint.sh  settings.html  simple_flight.html  sitemap.xml  teleport_deer.py  unreal_custenv.html  use_precompiled.html  who_is_using.html
AirLib/include/api/: ApiServerBase.hpp  RpcLibClientBase.hpp  RpcLibServerBase.hpp
AirLib/include/common/: CommonStructs.hpp
AirLib/include/physics/: Battery.hpp  FastPhysicsEngine.hpp  PhysicsBody.hpp
AirLib/include/vehicles/multirotor/: MultiRotor.hpp  MultiRotorPhysicsBody.hpp
AirLib/include/vehicles/multirotor/api/: MultirotorApiBase.hpp  MultirotorCommon.hpp  MultirotorRpcLibAdapators.hpp  MultirotorRpcLibAdaptors.hpp  MultirotorRpcLibClient.hpp
AirLib/include/vehicles/multirotor/firmwares/arducopter/: ArduCopterApi.hpp
AirLib/include/vehicles/multirotor/firmwares/simple_flight/: SimpleFlightQuadXParams.hpp
AirLib/src/api/: RpcLibClientBase.cpp  RpcLibServerBase.cpp
AirLib/src/vehicles/multirotor/api/: MultirotorRpcLibClient.cpp  MultirotorRpcLibServer.cpp
HelloDrone/: main.cpp
PythonClient/airsim/: types.py
Unreal/Environments/Blocks/: Blocks.uproject
Unreal/Plugins/AirSim/Source/SimMode/: SimModeBase.cpp  SimModeBase.h
Unreal/Plugins/AirSim/Source/Vehicles/Multirotor/: MultirotorPawnSimApi.cpp
api_docs/doctrees/: environment.pickle  index.doctree
api_docs/html/: genindex.html  index.html  objects.inv  searchindex.js
api_docs/html/_modules/airsim/: client.html  types.html
bridge_ws/: build_bridge.sh  run_bridge.sh
cmake/HelloCar/: Makefile
cmake/rpclib_wrapper/: Makefile
cmake/rpclib_wrapper/rpclib/: Makefile
cmake/rpclib_wrapper/rpclib/cmake/: rpclibTargets.cmake
include/: airsim_ros_wrapper.h  pd_position_controller_simple.h
launch/: motion_planning_gdb.launch  planning_pipeline.launch
msg/: drone_state.msg
ros/src/airsim_ros_pkgs/: CMakeLists.txt  package.xml
ros/src/airsim_ros_pkgs/include/: airsim_ros_wrapper.h
ros/src/airsim_ros_pkgs/launch/: octomap_server.launch  package_delivery_dynamic.launch  scanning.launch
ros/src/airsim_ros_pkgs/msg/: MultiDOFarray.msg
ros/src/airsim_ros_pkgs/rviz/: default.rviz
ros/src/airsim_ros_pkgs/src/: airsim_ros_wrapper.cpp  follow_trajectory_node.cpp  follow_trajectory_static.cpp  future_collision.cpp  package_delivery_node.cpp  package_delivery_withMap.cpp  profile_manager.cpp  scanning_node.cpp
ros/src/airsim_tutorial_pkgs/launch/front_stereo_and_center_mono/: package_delivery_node.rviz
ros/src/cinematography/: CMakeLists.txt  package.xml
ros/src/cinematography/include/: airsim_ros_wrapper.h
ros/src/cinematography/launch/: follow_trajectory_gdb.launch  motion_planning_gdb.launch  planning_pipeline.launch
ros/src/cinematography/msg/: artistic_spec.msg
ros/src/cinematography/src/: airsim_ros_wrapper.cpp  follow_trajectory_node.cpp  motion_planner.cpp  pd_position_controller_simple.cpp
ros/src/common/: panic_pcl.cpp
ros2/: build.sh
ros2/src/cinematography/: CMakeLists.txt  package.xml
ros2/src/cinematography/include/: airsim_ros_wrapper.h  filter.h  ioHelper.h  optimize_drone_path.cuh
ros2/src/cinematography/launch/: actor_detection.launch.py  debug.rviz  debug_rviz.launch.py  debug_viz.launch.py  follow_trajectory.launch.py  heading_estimation.launch.py  mapping_pipeline.launch.py  motion_forecasting.launch.py  motion_planning.launch.py  planning_pipeline.launch.py  ros2_wrapper.launch.py  run_application.launch.py  run_application_debug.launch.py  vision_pipeline.launch.py
ros2/src/cinematography/msg/: BoundingBox.msg  DroneState.msg  MultiDOFarray.msg
ros2/src/cinematography/src/: actor_detection.cpp  airsim_ros2_wrapper.cpp  airsim_ros_wrapper.cpp  debug_viz.cpp  filter.cpp  filterImage.cu  follow_trajectory.cpp  heading_estimation.cpp  ioHelper.cpp  mapping.cpp  motion_forecasting.cpp  motion_planner.cpp  optimize_drone_path.cu
ros2/src/cinematography/srv/: TakeoffGroup.srv
ros2/src/cinematography_msgs/: CMakeLists.txt  GimbalAngleQuatCmd_mapping_rule.yaml  package.xml
ros2/src/cinematography_msgs/msg/: BoolPlusHeader.msg  BoundingBox.msg  VelCmdGroup.msg  VisionMeasurements.msg
ros2/src/cinematography_msgs/srv/: GetTrajectory.srv  Land.srv  Reset.srv
search/: search_index.json
src/: airsim_ros_wrapper.cpp  follow_trajectory_node.cpp  motion_planner.cpp
